# CSE380_Final_Project

final_project_loadtest/: Cargo.toml  README.md
final_project_loadtest/src/: main.rs
final_project_postgres/: Cargo.toml  docker-compose.yml
final_project_postgres/src/: db_init.rs  main.rs
final_project_sqlite/: Cargo.toml  tarpaulin-report.html
final_project_sqlite/src/: db_init.rs  lib.rs  main.rs
final_project_sqlite/tests/: baseline.rs  readheavy.rs  writeheavy.rs
plots/: loadtest_data.xlsx  plots.py  ~$loadtest_data.xlsx
