[package]
name = "tms_min"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "3", features = ["test"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",  # Use Tokio as async runtime
    "sqlite"         # SQLite database support ONLY
]}
log = "0.4"
rand = "0.8"
